--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@ ul li:not(:last-child) {
 
 .page {
   margin: 20px;
+  background-color: #f1f1f1;  
 }
 
 .interactions {
@@ -129,4 +130,61 @@ ul li:not(:last-child) {
   padding: 10px;
   background: #ffffff;
   border: 1px solid #e3e3e3;
+}
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin: 0px;  
+}
+.switchLabel {
+  position: relative;
+  display: inline-block;
+  width: 80px;
+  height: 34px;
+  bottom: 10px;  
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #17a2b8;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #17a2b8;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
